--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,16 +1,8 @@
 {
-    "extends": "airbnb",
-    "plugins": [
-      "react",
-      "jsx-ally",
-      "import",
-      "chai-friendly"
-    ],
-    "env": {
-      "mocha": true
-    },
-    "rules": {
-      "no-unused-expressions": 0,
-      "chai-friendly/no-unused-expressions": 2
-    }
+  "extends": "airbnb",
+  "plugins": [
+    "react",
+    "jsx-ally",
+    "import"
+  ]
 }
