--- a/package.json
+++ b/package.json
@@ -58,10 +58,14 @@
     "jest": "^22.4.2",
     "jest-cli": "^22.4.2",
     "nyc": "^11.4.1",
+    "prop-types": "^15.6.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "regenerator-runtime": "^0.11.1",
     "webpack": "^4.0.0",
     "webpack-dev-server": "^3.0.0"
+  },
+  "dependencies": {
+    "node-fetch": "^2.0.0"
   }
 }
