Config lint and jest

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,7 +2,9 @@
   "extends": "airbnb",
   "plugins": [
     "react",
-    "jsx-ally",
     "import"
-  ]
+  ],
+  "env": {
+    "jest": true
+  }
 }
